<?xml version="1.0"?>
<package format="2">
  <name>ui_test</name>
  <version>0.1.0</version>
  <description>

     description

  </description>
  <maintainer email="author@mail.com">author</maintainer>
  <author>author</author>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>cv_bridge</build_depend>
<exec_depend>cv_bridge</exec_depend>
<build_depend>opencv</build_depend>
<exec_depend>opencv</exec_depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
