<?xml version="1.0"?>
<package format="3">
  <name>ui_test</name>
  <version>0.1.0</version>
  <description>

     description

  </description>
  <maintainer email="author@mail.com">author</maintainer>
  <author>author</author>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autorace_interfaces</depend>
<buildtool_depend>rosidl_default_generators</buildtool_depend>
<exec_depend>rosidl_default_runtime</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <build_depend>cv_bridge</build_depend>
<exec_depend>cv_bridge</exec_depend>
<build_depend>opencv</build_depend>
<exec_depend>opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
